# ChangeLog for app-forensics/libewf
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-forensics/libewf/ChangeLog,v 1.38 2013/02/10 20:39:13 radhermit Exp $

*libewf-20130128 (10 Feb 2013)

  10 Feb 2013; Tim Harder <radhermit@gentoo.org> +libewf-20130128.ebuild:
  Version bump.

  27 Jan 2013; Tim Harder <radhermit@gentoo.org> -libewf-20100226-r1.ebuild,
  -libewf-20120813.ebuild, -libewf-20121209-r1.ebuild, metadata.xml:
  Remove old.

*libewf-20130120 (27 Jan 2013)

  27 Jan 2013; Tim Harder <radhermit@gentoo.org> +libewf-20130120.ebuild:
  Version bump. Add subslot and zlib use flag.

  22 Jan 2013; Jeroen Roovers <jer@gentoo.org> libewf-20121209.ebuild:
  Stable for HPPA (bug #451638).

  22 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libewf-20121209.ebuild:
  Stable for x86, wrt bug #451638

  16 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libewf-20121209.ebuild:
  Stable for ppc, wrt bug #451638

  14 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libewf-20121209.ebuild:
  Stable for amd64, wrt bug #451638

*libewf-20130105 (14 Jan 2013)

  14 Jan 2013; Tim Harder <radhermit@gentoo.org> +libewf-20130105.ebuild:
  Version bump, update HOMEPAGE and SRC_URI.

*libewf-20121209-r1 (14 Jan 2013)

  14 Jan 2013; Tim Harder <radhermit@gentoo.org> +libewf-20121209-r1.ebuild,
  metadata.xml:
  Revision bump. Add fuse, uuid, and ssl use flags and fix deps.

*libewf-20121209 (10 Dec 2012)

  10 Dec 2012; Patrick Lauer <patrick@gentoo.org> +libewf-20121209.ebuild:
  Bump

  08 Dec 2012; Jeroen Roovers <jer@gentoo.org> libewf-20120813.ebuild:
  Stable for HPPA (bug #441078).

  07 Dec 2012; Agostino Sarubbo <ago@gentoo.org> libewf-20120813.ebuild:
  Stable for ppc, wrt bug #441078

  07 Dec 2012; <ago@gentoo.org> libewf-20120813.ebuild:
  Stable for x86, wrt bug #441078

  07 Dec 2012; <ago@gentoo.org> libewf-20120813.ebuild:
  Stable for amd64, wrt bug #441078
