@@ -2,25 +2,25 @@
 Hash: SHA256
 
 DIST libpaper_1.1.24.tar.gz 355272 SHA256 38ac28114673d4b175a939d981e0477a0ed9bcaab27033522ecb2ca78ee90c7e SHA512 f90816723dafa9ce0aef652e027b13174d2430208003d3715d6f96226130bc66cfc36465f1a5a3f855697708c389f219b964a5534a64a8c98ac53662040df67b WHIRLPOOL 74a7cb6dec146104988dd5c5e0b4bf7fb776bde086c4fecf658d949e17d6701fa1b23511a7be43f01a01dcfd7c0340f23c3c9ec1c51fb7718d6b0dbf1761e75d
-EBUILD libpaper-1.1.24-r1.ebuild 1264 SHA256 8f0e82e4f8316318b6543106314c961eca9ef06c235fc3b5b31779e46998267d SHA512 7055324f4c41261ab4fd3d5e37fa9dcfa566759dd1bda68bb3da593e565ab3a04cedc8d27865bf1e7a7bb6387f0b043f895b811843b9e641e4baab39b143f721 WHIRLPOOL f583fca6e868c246d7d8e42a67c701d5c90daa71d9bff1ad90ad085a81c68f246e2e2dbdb1b1ef761ef7429606a63d19d5c22b8e447581c77b31c636ea7224e8
-MISC ChangeLog 7202 SHA256 3c19ac85ba3645652d3aa283d0673d2a1facb04dc6690390ab2c791bc2002998 SHA512 6be84373b9f26d23052c364d8d22c0198cc0e367eb36b98f1fb2b6350f275a3c5186d377b4810f25a4e8d5bbbb399acaa5f2c6d0212f2fe8f0fb15ee5584fb65 WHIRLPOOL bc60d2ef028085037c8717f50f5a8a1c420ab104f74a7446dce81b4be42797131e40ac4f7e714cccf2902ecadffcc331ab0a50de6642ff1e7355b2f6749d7612
+EBUILD libpaper-1.1.24-r1.ebuild 1220 SHA256 70f30bbc6237b4d4c01364c2137b5094124ba7e233a18f9d0c257be3372f60e7 SHA512 6fd5ab20ec97ff049cdf1ba33a25774bec8dc8d4bf6b1f6036ca7b295951b236c7590ea33308faad975403fa8ad3b1be73ce1f7a40ffebb2fa713aa9693ea452 WHIRLPOOL 3d8d4e20d7c898247edcaae55d1de3bbe69d4bbdbfc6245e56e86b0aa8fbe725315761b1efe488e69c0d1d9ba6e49d88e0eb7e7ad68c46763553cd8d7ee9a81c
+MISC ChangeLog 7320 SHA256 90bc24f60f9559da00ecd315b610ee9912ef4b9d3d6d1044eab4cd57d2384a8f SHA512 b39b5fec7b5c3bbd42d13080e5a855f36fd061b1275233a3ca35310693041952917c0b115ccf06f6d90e3980f0b51ecd499dec827d822c10c98034c60075f5eb WHIRLPOOL 2cb78659289b11ddccf550e1b4b4393bdf536e01ed3d77db6a3d22af3522e782c0f5c7aae2bf48ee515b83ab08660dbd95a5c06d444ec914d9a86e5252bb4717
 MISC metadata.xml 161 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76 SHA512 3b5d653ba492267297653f61d148b859d366b53d9c29670f175c84622f6ad64141e93e30db08e24f87a75e6fcf1ab187cc8783b72aa2ee1709cf1ef6c7c75e22 WHIRLPOOL 2516e48e62e1604c152e32a6336881cb02f3599c23856a220019bc807611880480bfe4af7a60a2bb45efbb93faf89141ccfd9fde69044677604bf976dfb65988
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQJ8BAEBCABmBQJRT2EpXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJRT30hXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
-QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcr1UP/jIO+bjcDEhhm7iCd5ewUTT2
-c9XnlXz7rMQWEJ1da00G0osY/ib6xbiL8UOhvNt0uekjZoCLVU5auJ12+Y52cGeZ
-Bjq9yDUIvKgE5nc3vvF67PTcxb8MpjO0hEOJsURYEp5P4isLa9fdtJdLQeJB9SMt
-8crkIt7fzYVzATCyJqdUFRHHPqour9zXGodd/pAj2GPW4CmdHglOocJXrEJmkASC
-ZSl0YUsj9VMU/vv+wbYzpFET+JPesrjsMaDqQMWhiQWxaJYvr8zaRr8hOM8VETRZ
-EVPCtf48KAf72l48z/PCyD3swpiGt7o3DJjziQCxpHeSbc81FxkK8WkcW+KvCpNu
-J3H5taBTcU3zsU2EmyBR6f8VJIXh+iweLOIbsGImBf/la6ghwE+JNr0R/NojSC45
-LTO9MeaoXbwCTlHmT7AsjMXAlGorLbkzfDz34WB8W7WFfhJIzoZdRhM0uWSv96am
-9lpOlftHG4m67HIJmgiWrEQoFxNZ9Ju159eiI9qQgfGlDJPfNKnMvmviKdzIeK7j
-QYFlYBMTNWDEdEi46jkZCvSdcTPgg7KpYWRZO6Hw3uKRbcaosoRXNY3PZ1XesZSJ
-9euWQVJy3UtnxzZs5tboOXxoOkAD9OWbsv8RIlmpYVvG8/IC7rBrKkk0XfRkr/fE
-MYwLqUEh9vNW3LcXwcoH
-=mJPo
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcrssP/3zcRL6MQ0CPm2pSk2lf1VRz
+5VhRa3Ikh5VKb2XJnEkwONFx1gp33RZ0EPyLKznc+VPbnsNJy10EiBS22U3fFtkd
+N2Hh8KXvJg8auKMwtG9RgIwZk5aQtxSjHPie3o/+7SDAtDtMoxcPyOBcehNtL0IH
+MBphV8g1PH4UXYg53n/d791iGpsmdCDPAPZE5iGHOaEYg7ocRmi+bDaUh1E5vVnU
+DKkKIp2S7ILRyGLxyO5foWtyaA+qn/FdCs6x/nvbrQAV9FHtRyYAgf8LqsYUQ9z/
+DBHKrbooCxmu8Ag6fA+4MeFMXlrN3pkzl99RCol/4JHFWSYaXxLqGznDja4jOidN
+jISVJQbZFKEHgB3cf71PhbLW13PS0LhY0+JmtEMmfVpB4r81edC3Vy+8oPR/S+nT
+/VQWssR7DkFkkum26L726sDqOaPj8feZsMS2aJWCtUe5w0TV60ZiBl2BRcLg6l5T
+XBRAYHgxm1SmraTFtUKdpHBt65N4Ndh4IoDT913VjH0lclVUiRGa2jr5uZgjdFxf
+TCa9nshqvVIL6lgVWcKjrMsUJAtChVDLPjOnQc8qNd+7ni9JpV80RSbCF/bQbjPt
+DmAs7v8O+JqYG95R0zWhFGKc0Ge9x0OmtCKpZPY2lngV1EB1XO5cXKN6L2I7Fk6S
+vYM8LKx8bdCIjhVnx196
+=0tug
 -----END PGP SIGNATURE-----
