@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/libpaper/libpaper-1.1.24-r1.ebuild,v 1.10 2013/03/24 20:22:41 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/libpaper/libpaper-1.1.24-r1.ebuild,v 1.11 2013/03/24 22:23:43 dilfridge Exp $
 
 EAPI=4
 
@@ -40,8 +40,7 @@ src_install() {
 
 	if ! has_version app-text/libpaper ; then
 		echo
-		elog "run \"paperconf -p letter\" as root to use letter-pagesizes"
-		elog "or paperconf with normal user privileges."
+		elog "run e.g. \"paperconfig -p letter\" as root to use letter-pagesizes"
 		echo
 	fi
 }
