@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=sys-libs/zlib fuse? ( sys-fs/fuse ) uuid? ( sys-apps/util-linux ) ssl? ( dev-libs/openssl ) zlib? ( sys-libs/zlib )
+DESCRIPTION=Implementation of the EWF (SMART and EnCase) image format
+EAPI=5
+HOMEPAGE=http://code.google.com/p/libewf/
+IUSE=debug ewf +fuse rawio +ssl static-libs +uuid unicode zlib
+KEYWORDS=~amd64 ~hppa ~ppc ~x86
+LICENSE=BSD
+RDEPEND=sys-libs/zlib fuse? ( sys-fs/fuse ) uuid? ( sys-apps/util-linux ) ssl? ( dev-libs/openssl ) zlib? ( sys-libs/zlib )
+SLOT=0/2
+SRC_URI=http://libewf.googlecode.com/files/libewf-20130303.tar.gz
+_eclasses_=autotools	cf83655b19ed98f9ea3b44f4572b51a3	autotools-utils	c3608254689d959486b175186734d10d	eutils	50d18ebffcbd8bd63614b89c2d664d0d	libtool	2b273eea1976cfaed3449345d94331ac	multilib	ded93e450747134a079e647d888aa80b	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=80fdadf51c29890b5d7f58a438f8395e
