@@ -8,4 +8,4 @@ LICENSE=GPL-2
 SLOT=0
 SRC_URI=mirror://debian/pool/main/libp/libpaper/libpaper_1.1.24.tar.gz
 _eclasses_=autotools	cf83655b19ed98f9ea3b44f4572b51a3	eutils	50d18ebffcbd8bd63614b89c2d664d0d	libtool	2b273eea1976cfaed3449345d94331ac	multilib	ded93e450747134a079e647d888aa80b	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=0b85450f1c47bef85ed3fa3a8459e7bf
+_md5_=5f6699d188fe7da2c6d27ee851d99820
