@@ -1,6 +1,10 @@
 # ChangeLog for app-text/libpaper
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/libpaper/ChangeLog,v 1.55 2013/03/24 20:24:23 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/libpaper/ChangeLog,v 1.56 2013/03/24 22:23:43 dilfridge Exp $
+
+  24 Mar 2013; Andreas K. Huettel <dilfridge@gentoo.org>
+  libpaper-1.1.24-r1.ebuild:
+  Fix elog message, bug 421821
 
   24 Mar 2013; Andreas K. Huettel <dilfridge@gentoo.org>
   -files/libpaper-1.1.14.8-malloc.patch, -libpaper-1.1.23.ebuild:
